--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,17 @@
-APP_NAME=Laravel
+APP_NAME=JamatTimings
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:rp1Huu9uc2DydaIknJL66sSpysWGvreB4m0PVUOtX1Q=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://jamattime.com
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=jamattime
+DB_USERNAME=root
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
