--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=JamatTimings
+APP_NAME=JamatTiming.com
 APP_ENV=local
 APP_KEY=base64:rp1Huu9uc2DydaIknJL66sSpysWGvreB4m0PVUOtX1Q=
 APP_DEBUG=true
