--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dependencies": {
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
+        "react-loading": "^2.0.2",
         "react-router-dom": "^4.2.2"
     }
 }
